tests/fixtures/valid/layout_stage4/ambiguous_continuations.pine
//@version=6
indicator("Ambiguous continuations")
x = close
  + open
  - low
y = close
    + open
z = close > open ?
    close :
    open
