tests/fixtures/invalid/layout/duplicate_declaration_statement.pine
//@version=6
indicator("x")
strategy("y")
